# bootcamp_data_engineering_aula_16

./: README.md  ddl.py  dml.py  pyproject.toml
