[tool.poetry]
name = "aula16"
version = "0.1.0"
description = ""
authors = ["Gus1101 <augustosantosb60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
